e12. Started setting up a consistent UI theme. Changed color scheme and overhauled project browser with a few animations.
Diverged from tutorials a tad here. Added the AgencyFB font to the project and used it for the "Create Project" and "Open Project"  buttons. Also modified the animation so that both the highlight and content began animating at the same time.

--- a/DossylEditor/DossylEditor.csproj
+++ b/DossylEditor/DossylEditor.csproj
@@ -10,4 +10,12 @@
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Fonts\AgencyFB-Bold.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Fonts\AgencyFB-Bold.ttf" />
+  </ItemGroup>
+
 </Project>
