e18. setup ability to add a new script to the visual studio solution. Uses new dialog window and on creation, loads visual studio (if not already open) and focuses on the new files just added. added files also contain default engine code for game entities.
Off tutorial, changed namespacing pattern in c++ to be titlecase to keep it consistent. Also used a future update from e48.3 to get a newer version of envdte packages, which are no longer consistently functional via the COM system but instead via nuget packages.

--- a/DossylEditor/DossylEditor.csproj
+++ b/DossylEditor/DossylEditor.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
@@ -12,6 +12,11 @@
 
   <ItemGroup>
     <None Remove="Fonts\AgencyFB-Bold.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="envdte" Version="17.14.40260" />
+    <PackageReference Include="envdte80" Version="17.14.40260" />
   </ItemGroup>
 
   <ItemGroup>
