--- a/DossylEditor/DossylEditor.csproj
+++ b/DossylEditor/DossylEditor.csproj
@@ -6,8 +6,10 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
-    <BaseOutputPath>..\x64\</BaseOutputPath>
+    <BaseOutputPath>..\</BaseOutputPath>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	<Configurations>Debug;Release;DebugEditor;ReleaseEditor</Configurations>
+	<Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
