--- a/DossylEditor/DossylEditor.csproj
+++ b/DossylEditor/DossylEditor.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <PlatformTarget>x64</PlatformTarget>
-    <BaseOutputPath>..\</BaseOutputPath>
+    <BaseOutputPath>$(ProjectDir)../</BaseOutputPath>
 	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	<Configurations>Debug;Release;DebugEditor;ReleaseEditor</Configurations>
 	<Platforms>x64</Platforms>
